# coderun-2025

./: .gitignore
embeded/: problem_1.cpp  problem_2.cpp
gamedev/: CMakeLists.txt
web-django/mainApp/: settings.py  urls.py
web-django/pirateApp/: admin.py  models.py  oracle_client.py  urls.py  views.py
web-django/pirateApp/static/pirateApp/css/: style.css
web-django/pirateApp/templates/pirateApp/: compass.html  treasure.html
web-js/: README.md
web-js/backend/src/rle/: compress.js  decompress.js  segment.js
web-js/frontend/src/: App.jsx  styles.css
web-js/frontend/src/components/: Controls.jsx  FileDropZone.jsx  TextAreas.jsx
web-js/frontend/src/services/: api.js
web-js/frontend/src/utils/: rle.js
